--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
+    compile 'com.github.msayan:tutorial-view:v1.0.6'
     compile 'com.loopj.android:android-async-http:1.4.9'
 }
