--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Inicio"
+        <activity
+            android:name=".Inicio"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +32,8 @@
             android:label="Registrate"
             android:parentActivityName=".Inicio" />
         <activity android:name=".Configuracion_f_corte" />
-        <activity android:name=".Principal"
+        <activity
+            android:name=".Principal"
             android:label="@string/title_activity_principal"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Principal_admin_global" />
@@ -40,25 +42,29 @@
             android:name=".Tarifas"
             android:label="@string/title_activity_tarifas"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Configuracion_Perfil"
+        <activity
+            android:name=".Configuracion_Perfil"
             android:label="Configura el Perfil"
-            android:parentActivityName=".Menu_Configuraciones"
-            ></activity>
-        <activity android:name=".Menu_Configuraciones"
+            android:parentActivityName=".Menu_Configuraciones" />
+        <activity
+            android:name=".Menu_Configuraciones"
             android:label="Configurar"
-            android:parentActivityName=".Principal"
-            />
-        <activity android:name=".SplashInicioActivity"
+            android:parentActivityName=".Principal" />
+        <activity
+            android:name=".SplashInicioActivity"
             android:theme="@style/AppTheme.NoActionBar">
-        <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Cambiar_contrasenia"
-            android:parentActivityName=".Menu_Configuraciones"
-            ></activity>
+        <activity
+            android:name=".Cambiar_contrasenia"
+            android:parentActivityName=".Menu_Configuraciones" />
+        <activity android:name=".Energia_Generada"
+            android:label="Energía Generada"
+            android:parentActivityName=".Principal"/>
     </application>
 
 </manifest>
